log
Thu 21 Mar 2024 07:09:54 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:7: error: implicit declaration of function ‘push_front’; did you mean ‘pushFront’? [-Werror=implicit-function-declaration]
   49 |       push_front(L, dato);
      |       ^~~~~~~~~~
      |       pushFront
cc1: all warnings being treated as errors
Compilation failed
6825dab
Thu 21 Mar 2024 07:10:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
8078d2e
Thu 21 Mar 2024 07:10:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 20/70
5fbfbb9
Thu 21 Mar 2024 07:12:36 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
67544a9
